# fratmscript

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-playground.yml
crates/fratm-cli/: Cargo.toml
crates/fratm-cli/src/: main.rs
crates/fratm-core/: Cargo.toml
crates/fratm-core/src/: errors.rs  lib.rs  sourcemap.rs
crates/fratm-core/src/codegen/: mod.rs
crates/fratm-core/src/lexer/: mod.rs  token.rs
crates/fratm-core/src/parser/: ast.rs  mod.rs
crates/fratm-wasm/: Cargo.toml
crates/fratm-wasm/src/: lib.rs
examples/: 01_salutatore.fratm  02_variabili_matematica.fratm  03_condizionali.fratm  04_loop.fratm  05_array_oggetti.fratm  06_funzioni.fratm  07_async.fratm  08_classi.fratm  09_moduli.fratm  10_nuove_feature.fratm
