[workspace]
resolver = "2"
members = [
    "crates/fratm-core",
    "crates/fratm-cli",
    # "crates/fratm-wasm",  # Requires wasm-pack to build
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kkratterf/fratmscript"
keywords = ["compiler", "transpiler", "javascript", "napoletano"]

[workspace.dependencies]
# Shared dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
